# python-autotools-tutorial

./: Makefile  Makefile.in  README.md  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  hello-world.in
src/hello/: Makefile  Makefile.am  Makefile.in  application.py
